Navbar css fixes. Sticky navbar, colors, logo size, hamburger dropdowns now visible

--- a/frontend/src/GlobalStyles.css
+++ b/frontend/src/GlobalStyles.css
@@ -4,6 +4,9 @@
   --basic-purple: #6930c3;
   --light-purple: #ddcaed;
   --transparent-douglas-gray: #0e0e0e2e;
+
+  --basic-text-shadow: -1px 0px 1px black, 0px 1px 2px black;
+  --hover-text-shadow: 0px 0px 5px var(--basic-purple), 1px 0px 7px var(--light-purple);
 }
 
 * {
@@ -73,7 +76,7 @@ a:hover {
 }
 
 div.ui.container {
-  margin-top: 10px; /*height of the navbar + 20px*/
+  margin-top: 70px; /*height of the navbar + 20px*/
 }
 
 img {
